--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -15,7 +15,7 @@
     @include clearfix;
     margin-left: auto;
     margin-right: auto;
-    padding: 1em;
+    padding: 0.5em;
     max-width: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -23,7 +23,7 @@
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between;
-    font-family: $sans-serif-narrow;
+    font-family: $alef;
 
     @include breakpoint($x-large) {
       max-width: $max-width;
@@ -49,13 +49,18 @@
   display: flex;
   -ms-flex-item-align: center;
   align-self: center;
+  align-items: center;
   font-weight: bold;
+  font-size: 120%;
+  gap: 0.5em;
   // z-index: 20;
 }
 
 .site-subtitle {
   display: block;
-  font-size: $type-size-8;
+  font-size: 0.9em;
+  font-weight: normal;
+  color: grey;
 }
 
 .masthead__menu {
