--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -38,3 +38,27 @@
 @import "minimal-mistakes/archive";
 @import "minimal-mistakes/sidebar";
 @import "minimal-mistakes/print";
+
+/* 
+ * Alef Hebrew (Hebrew) http://www.google.com/fonts/earlyaccess
+ */
+ @font-face {
+    font-family: 'Alef Hebrew';
+    font-style: normal;
+    font-weight: 400;
+    src: url(//fonts.gstatic.com/ea/alefhebrew/v4/Alef-Regular.eot);
+    src: url(//fonts.gstatic.com/ea/alefhebrew/v4/Alef-Regular.eot?#iefix) format('embedded-opentype'),
+         url(//fonts.gstatic.com/ea/alefhebrew/v4/Alef-Regular.woff2) format('woff2'),
+         url(//fonts.gstatic.com/ea/alefhebrew/v4/Alef-Regular.woff) format('woff'),
+         url(//fonts.gstatic.com/ea/alefhebrew/v4/Alef-Regular.ttf) format('truetype');
+  }
+  @font-face {
+    font-family: 'Alef Hebrew';
+    font-style: normal;
+    font-weight: 700;
+    src: url(//fonts.gstatic.com/ea/alefhebrew/v4/Alef-Bold.eot);
+    src: url(//fonts.gstatic.com/ea/alefhebrew/v4/Alef-Bold.eot?#iefix) format('embedded-opentype'),
+         url(//fonts.gstatic.com/ea/alefhebrew/v4/Alef-Bold.woff2) format('woff2'),
+         url(//fonts.gstatic.com/ea/alefhebrew/v4/Alef-Bold.woff) format('woff'),
+         url(//fonts.gstatic.com/ea/alefhebrew/v4/Alef-Bold.ttf) format('truetype');
+  }
